frontend/src/stylesheets/components/_file-browser.scss
.file-browser {
  width: 100%;
  table-layout: fixed;
  border-collapse: collapse;
  overflow: auto;

  & .file-browser__entry:nth-child(even) {
    background-color: $secondaryLight;
  }

  & .file-browser__entry:nth-child(odd) {
    background-color: $secondary;
  }
}
.file-browser__wrapper {
  position: relative;
  height: 100%;
}

// The extender is used as a drop zone to move to the root
.file-browser__extender {
  height: 70%;
}

.file-browser__highlighter {
  pointer-events: none;
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.file-browser__button-clear {
  color: inherit;
  text-decoration: none;
  font-weight: bold;
  padding: 0;
  margin-top: 5px;
  background: none;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;

  &:hover {
    text-decoration: underline;
  }

  &:focus {
    text-decoration: underline;
    outline: none;
    box-shadow: none;
  }
}

.file-browser__entry {
  user-select: none;
  cursor: pointer;

  &:focus {
    outline: none;
  }

  &--selected {
    color: white;
    background-color: $primaryLight !important;
  }

  &--focused {
    color: white;
    background-color: $primaryLight !important;
    outline: 1px solid $primary !important;
  }
}

.file-browser__header {
  user-select: none;
  position: relative;
  min-width: fit-content;
  padding-left: $baseSpacing;
  padding-right: $baseSpacing;
  text-align: left;

  &-resizer {
    &-grabber {
      background-color: $secondary;
      width: 1px;
      height: 80%;
      margin-left: auto;
      margin-right: auto;
    }

    z-index: 1;
    cursor: ew-resize;
    position: absolute;
    left: 100%;
    top: 3px;
    bottom: 3px;

    width: 10px;
    height: 100%;
  }
}

.file-browser__root-drop-highlight {
  box-shadow: inset 0 0 10px $primaryLight;
}

.file-browser__sort-tip {
  position: absolute;
  right: $baseSpacing;
}

.file-browser__cell {
  padding-left: $baseSpacing;
  padding-right: $baseSpacing;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.file-browser__cell-flex-container {
  display: flex;
  align-items: center;
}

.file-browser__rename-input {
  border: 0;
  padding: 0;
  // as a child of .file-browser__cell-flex-container, this lets
  // the input fill the remaining space in the column (everything to
  // the right of the icon)
  flex-grow: 1;
}

.file-browser__icon {
  // these !importants are needed because we're overriding Semantic UI
  // styles with higher specificity
  flex-shrink: 0 !important;
  margin-right: 2px !important;
  font-size: 17px !important;
  z-index: 0 !important;
}

.file-browser__name-pad {
  flex-shrink: 0;
  width: $baseSpacing * 2;
  display: inline-block;
}

